...
                <div className="flex flex-col p-3 text-center md:px-28 md:text-left">
                    <h1 className="font-primary text-2xl font-bold">
                        {isFeatured
                            ? 'Featured database schema templates'
                            : tag
                              ? `Database schema templates for ${tag}`
                              : 'Database schema templates'}
                    </h1>
                    <h2 className="mt-1 font-primary text-base text-muted-foreground">
                        Discover a collection of real-world database schema
                        diagrams
                        {tag ? (
                            <>
...
                                            title: 'Featured',
                                            href: '/templates/featured',
                                            icon: Star,
                                            selected: isFeatured,
                                        },
                                        {
                                            title: 'All Templates',
                                            href: '/templates',
                                            icon: Component,
                                            selected: isAllTemplates,
                                        },
                                    ]}
                                />
...
